Fixed Chrome/Safari issue with radio button visibility

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -138,7 +138,21 @@ div {
   display: block;
 }
 
-.info input {
+.info input[type=range] {
+  text-align: center;
+  padding: 1em;
+  width: 35%;
+  height: 25%;
+  font-family: monospace;
+  color: #000000;
+  font-weight: 300;
+  font-size: 1em;
+  border: .1em dotted rgb(177, 177, 177);
+  border-radius: 2%;
+  background: transparent;
+}
+
+.info input[type=button] {
   text-align: center;
   padding: 1em;
   width: 35%;
